package pt.leo.command.actions;

public interface Command {
    void doIt();
    void undoIt();
}
