@startuml
'https://plantuml.com/class-diagram

hide empty members

interface Command
class Installer
class Product
class ExtractBinariesCommand
class InstallDbSchemaCommand
class MigrateSettingsCommand

Command <|--- ExtractBinariesCommand
Command <|-- InstallDbSchemaCommand
Command <|--- MigrateSettingsCommand

Installer -> Command
ExtractBinariesCommand -> Product
InstallDbSchemaCommand -> Product
Product <- MigrateSettingsCommand

@enduml